# agentplane

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LANDSCAPE.md  Makefile  README.md  flake.nix  pyproject.toml
.github/: CODEOWNERS
.prophet/: hardening.yaml
.sourceos/: manifest.json
bundles/: README.md
capability-registry/: README.md  resolve_binding_stub.py
docs/: EXECUTION_ENVELOPE_CONTRACT_v0.1.md  EXECUTION_TIMING_TELEMETRY.md  PROPHET_UNDERSTAND_DISPATCH.md  README.md  STATE-EVIDENCE-KERNEL.md  TRUST_INTEGRATION_V0.1.md  UPSTREAM-EXECUTION-STATUS.md  agentic-ops-runtime-budget-control-v0.1.md  agentic-pr-control-plane-v0.md  aokc-implementation-checklist.md  banking-execution-bundles.md  bounded-action-loop-v0.md  content-bundle-execution.md  context_vs_human_governance_boundary.md  evidence-linking-orderid-descriptorid.md  executors.md  fleet-model.md  legal-core-runtime-gate-v0.1.md  local_hybrid_slice_v0.md  order-to-bundle-bridge.md  receipt-lifecycle.md  replay-boundary.md  repository_map.md  sociosphere-bridge.md  state-pointers.md  system-space.md
evidence/: append_event_stub.py
examples/: README.md  agent-harness-runtime-contracts.example.json  agent-operation-contract.example.json  agentic-pr-work-order.example.json  broker-execution-bundle.example.json  policy-fabric-verdict-envelope.allow.example.json  policy-fabric-verdict-envelope.deny.example.json  policy-fabric-verdict-envelope.example.json  reasoning-failure-trace.exact-string.json  suite-execution-timing.example.json
fleet/: inventory.json
gateway/: README.md  dispatch_stub.py
(+808 files in other folders)
